tests/baselines/reference/missingReturnStatement1.errors.txt
tests/cases/compiler/missingReturnStatement1.ts(2,12): error TS2847: A function with this return type needs to explicitly return a value.


==== tests/cases/compiler/missingReturnStatement1.ts (1 errors) ====
    class Foo {
        foo(): number {
               ~~~~~~
!!! error TS2847: A function with this return type needs to explicitly return a value.
            //return 4;
        }
    }
    